--- a/BookCatalogue/appsettings.json
+++ b/BookCatalogue/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "ConnectionStrings": {
+    "SqliteConnectionString": "Data source=book-catalogue.db"
+  },
+  "AllowedHosts": "*"
 }
