--- a/UI/package.json
+++ b/UI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactdemo",
+  "name": "ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,7 +41,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "jest-editor-support": "^30.3.1"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
@@ -51,16 +52,16 @@
     "nth-check": "^3.0.1"
   },
   "scripts": {
-    "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "rimraf ./build && react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "prestart": "node aspnetcore-https && node aspnetcore-react"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
