--- a/API/API.csproj
+++ b/API/API.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\SQLiteDatabase\SQLiteDatabase.csproj" />
   </ItemGroup>
 
 </Project>
