changes in interfaces entity framework still doesn't work

--- a/SQLiteDatabase/appsettings.json
+++ b/SQLiteDatabase/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteConnectionString": "Data source=task-share.db"
+    "SqliteConnectionString": "Data source=book-catalogue.db"
   }
 }
