--- a/MockDatabase/MockDatabase.csproj
+++ b/MockDatabase/MockDatabase.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy /y /d &quot;$(OutDir)\MockDatabase.dll&quot; &quot;$(SolutionDir)API&quot;" />
+  </Target>
+
 </Project>
