--- a/API/app.config
+++ b/API/app.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="dbName" value="SQLiteDatabase.dll" />
+    <add key="aspnet:MaxHttpCollectionKeys" value="2000" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="2000" />
     <!--<add key="dbName" value="MockDatabase.dll" />-->
   </appSettings>
 </configuration>
