--- a/UI/package.json
+++ b/UI/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
@@ -11,6 +15,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
@@ -40,9 +45,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest-editor-support": "^30.3.1",
     "nan": "^2.16.0",
-    "typescript": "^4.7.4",
-    "jest-editor-support": "^30.3.1"
+    "typescript": "^4.7.4"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
