book reviews, todo validation

--- a/UI/package.json
+++ b/UI/package.json
@@ -12,6 +12,8 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "oidc-client": "^1.11.5",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
