--- a/API/app.config
+++ b/API/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="dbName" value="SQLiteDatabase.dll" />
-    <!--<add key="dbName" value="MockDatabase.dll" />-->
+    <!--<add key="dbName" value="SQLiteDatabase.dll" />-->
+    <add key="dbName" value="MockDatabase.dll" />
     <add key="aspnet:MaxHttpCollectionKeys" value="2000" />
     <add key="aspnet:MaxJsonDeserializerMembers" value="2000" />
   </appSettings>
